<?xml version="1.0"?>
<package format="3">
  <name>uneven_map</name>
  <version>0.0.1</version>
  <description>an uneven map package</description>

  <maintainer email="xulon666@gmail.com">xulong</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
</package>